# beatgear

./: .gitignore  BeatzGearStructure.drawio  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  app.py  application.yaml  build.gradle.kts  config.py  create_migration.sh  docker-compose.yml  migrate_db.sh  pyproject.toml  run_app.sh
backend-python/: .env.example  config.py
backend/.chalice/: config.json
backend/alembic/versions/: 2bbe85941617_.py  32efb8ebd291_.py  3f131fbd4e8d_initial_migration.py  5a37180a2353_initial_migration.py  77fc5d88ef4c_initial_migration.py  7866390e219f_initial_migration.py  97796338cc8d_.py  b8056d237b63_initial_migration.py  caf21fcd331f_initial_migration.py  e9c5d59705dd_.py  eb3e7234e04f_initial_migration.py  ece7bf94deab_initial_migration.py  faf7696d8bab_.py
backend/api/: api_bookings.py  api_hardware.py  api_users.py
backend/auth/: oauth.py
backend/db/: bookings_db.py  hardware_db.py  users_db.py
backend/keycloak/import/: hm-test-realm.json
backend/models/: db_models.py  models.py  request_models.py
backend/sql/: postgres_init.sql
backend/src/main/kotlin/com/beatgear/backend/: BackendApplication.kt
backend/src/main/resources/: application.yaml
backend/src/main/resources/db/migration/: V1__init_db.sql
backend/src/test/kotlin/com/beatgear/backend/: BackendApplicationTests.kt
backend/src/test/resources/: application-test.yaml
backend/tests/: .env  PLACE_.env.testing_HERE  conftest.py
backend/tests/api/: test_booking_api.py  test_hardware_api.py  test_users_api.py
backend/tests/test_util/: auth_util.py  db_util.py
backend/tests/util/: db_util.py  fixtures.py  model_util.py  util.py
backend/util/: auth_util.py  model_util.py  util.py
(+137 files in other folders)
