[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dominik Mack <dominik.mack@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.11"
chalice = "^1.29.0"
boto3 = "^1.34.155"
pydantic = "^2.4.2"
pytest-postgresql = "^6.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.32"
mockito = "^1.5.0"
pytest-mock = "^3.14.0"
testcontainers = "^4.8.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-jwt-extended = "^4.6.0"
cryptography = "^43.0.1"
alembic = "^1.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
